scripts/support/kubernetes/certs/darkcustomdomain-ingress.yaml
# DO NOT `kubectl apply` THIS FILE WITHOUT EXTREME CAUTION.
#
# This ingress is `kubectl patch`'d any time we want to add a new custom
# domain; `kubectl apply` would remove those hosts. If you need to update this
# file, you'll need a migration plan.
#
# Handles darkcustomdomain, for which we (not google) do TLS termination
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: darkcustomdomain-l4-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: darkcustomdomain-ip
    # I believe this is necessary to allow ACME to work, but we'll see!
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
  # This entry is a placeholder, to ensure we have a .spec.tls array to append
  # to using kubectl patch
  - secretName: 'ops-placeholder.darkcustomdomain.com'
    hosts:
    - 'ops-placeholder.darkcustomdomain.com'
  backend:
    serviceName: bwd-nodeport
    servicePort: 80
  rules:
  # This entry is a placeholder, to ensure we have a .spec.rules array to
  # append to using kubectl patch
  - host: ops-placeholder.darkcustomdomain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: bwd-nodeport
          servicePort: 80
